Cherry-pick 308455@main (60638d927b62). https://bugs.webkit.org/show_bug.cgi?id=308925

[GStreamer][1.28] media/media-source/media-source-paint-after-display-none.html crashes
    https://bugs.webkit.org/show_bug.cgi?id=308925

    Reviewed by Xabier Rodriguez-Calvar.

    In GStreamer 1.28 the gluploader negotiates a new kind of buffer pool with upstream when a software
    video decoder is used, making use of the udmabuf subsystem on Linux platforms. With that allocator,
    deep buffer copies attempted in ::flushCurrentBuffer() fail and the new sample doesn't have a valid
    buffer, so that needs to be checked in ::paint() and in our VideoFrame implementation.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::paint):
    * Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
    (WebCore::presentationTimeFromSample):
    (WebCore::VideoFrameGStreamer::VideoFrameGStreamer):

    Canonical link: https://commits.webkit.org/308455@main

Canonical link: https://commits.webkit.org/305877.181@webkitglib/2.52